<resources>

    <!-- For all -->
    <string name="app_name">GreenVancouver</string>
    <string name="app_profile">Profile picture</string>
    <string name="app_send">Send</string>
    <string name="app_publish">Publish</string>
    <string name="app_edit">Edit</string>
    <string name="app_save">Save</string>
    <string name="app_cancel">Cancel</string>
    <string name="temp_float">5.0</string>
    <string name="temp_int">100</string>
    <string name="temp_name">Lorem I. Dolor</string>
    <string name="temp_email">loremipsumo@dolor.sit</string>
    <string name="temp_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eleifend nulla mauris, quis lobortis velit suscipit ut. Vivamus tempor blandit rutrum. Etiam dapibus elit a facilisis tincidunt. Morbi in euismod enim. Curabitur at efficitur urna. Nunc ullamcorper, magna sit amet varius pharetra, ante justo condimentum nunc, eget congue turpis ligula sed risus.</string>

    <!-- For Splash activity -->
    <string name="splash_city">City</string>
    <string name="splash_car">Car</string>
    <string name="splash_textlogo">Text logo</string>
    <string name="splash_copyright">© Parasinos 2020\nSponsored by City of Vancouver</string>

    <!-- For Main activity -->
    <!-- For NavigationView in Main activity -->
    <string name="main_map">Map</string>
    <string name="main_bookmarks">Bookmarks</string>
    <string name="main_myreviews">My Reviews</string>
    <string name="main_settings">Settings</string>
    <string name="main_communicate">Communicate</string>
    <string name="main_share">Share</string>
    <string name="main_send">Send</string>
    <string name="main_login">Login/Sign Up</string>
    <string name="main_logout">Logout</string>

    <!-- For Map fragment -->
    <string name="searchhint">Search here</string>
    <string name="search">search</string>
    <string name="mapType">Toggle Map</string>
    <string name="zoomIn">+</string>
    <string name="zoomOut">-</string>

    <!-- For MyReviews Fragment -->
    <string name="myreviews_noreviews">You haven\'t written any reviews yet.</string>

    <!-- For Volunteer fragment -->
    <string name="volunteer_organizationname">Organization Name</string>
    <string name="volunteer_organizationdetails">Details</string>
    <string name="volunteer_registration">Registration Form</string>
    <string name="volunteer_name">Name:</string>
    <string name="volunteer_email">Email:</string>
    <string name="volunteer_phone">Phone:</string>
    <string name="volunteer_message">Additional Information (Reason, qualifications, etc.):</string>
    <string name="volunteer_send">Send</string>
    <string name="volunteer_orgInfo">NOTE: This organization has not provided us with volunteer requirements,
        but feel free to send them a message!</string>

    <!--For Settings fragment -->
    <string name="settings_enablelocation">Enable Location</string>
    <string name="settings_appearance">Dark Appearance</string>
    <string name="settings_maxresult">Max Number of Results </string>
    <string name="settings_tos"><u>Terms of Service</u></string>
    <string name="settings_aboutus"><u>About Us</u></string>

    <!-- For ProjectInfo activity -->
    <string name="projectinfo_details">Details</string>
    <string name="projectinfo_reviews">Reviews</string>
    <string name="projectinfo_volunteering">Volunteering</string>

    <!-- For Details Fragment -->
    <string name="details_nameDummy">Green Vancouver Project Name</string>
    <string name="details_categoryLabel">Category: </string>
    <string name="details_typeLabel">Type: </string>
    <string name="details_addressLabel">Address: </string>
    <string name="details_descriptionLabel">Description: </string>
    <string name="details_websiteLabel">Website: </string>
    <string name="details_imageDesc">Image Gallery</string>
    <string name="details_api_url">https://opendata.vancouver.ca/api/records/1.0/search/?dataset=greenest-city-projects&amp;refine.mapid=%s</string>


    <!-- For Reviews Fragment -->
    <string name="reviews_yours">Your review</string>
    <string name="reviews_others">Other reviews</string>
    <string name="reviews_reviewhint">Share your feedback with the project owner</string>
    <string name="reviews_noreviews">There are no reviews currently.\nBe the first to do so.</string>
    <string name="reviews_nouser">You haven\'t signed in yet.\nSign in to submit your review.</string>

    <!-- For Map fragment -->
    <string name="map_api_url">https://opendata.vancouver.ca/api/records/1.0/search/?dataset=greenest-city-projects&amp;q=%s&amp;&amp;rows=%d</string>

    <!-- For Login activity -->
    <string name="login_loginbtn">Login</string>
    <string name="login_signupbtn">Sign Up</string>
    <string name="login_emailhint">Email</string>
    <string name="login_passwordhint">Password</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="bookmarks_warning">Please sign in to view your bookmarks.</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_name"><![CDATA[First & Last Name]]></string>
    <string name="profile_btn_change">Change</string>
    <string name="profile_btn_cancel">Cancel</string>


</resources>
