<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/item_map"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/item_map"
        android:name="com.parasinos.greenvancouver.fragments.MapFragment"
        android:label="@string/main_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/item_bookmarks"
        android:name="com.parasinos.greenvancouver.fragments.BookmarksFragment"
        android:label="@string/main_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/item_myreviews"
        android:name="com.parasinos.greenvancouver.fragments.MyReviewsFragment"
        android:label="@string/main_myreviews"
        tools:layout="@layout/fragment_my_reviews" />

    <fragment
        android:id="@+id/item_settings"
        android:name="com.parasinos.greenvancouver.fragments.SettingsFragment"
        android:label="@string/main_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/item_share"
        android:name="com.parasinos.greenvancouver.fragments.ShareFragment"
        android:label="@string/main_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/item_send"
        android:name="com.parasinos.greenvancouver.fragments.SendFragment"
        android:label="@string/app_send"
        tools:layout="@layout/fragment_send" />

</navigation>