<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/enableLocationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_enablelocation"
            style="@style/SettingTextStyle"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Switch
            android:id="@+id/darkAppearanceSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_appearance"
            style="@style/SettingTextStyle" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />




    </LinearLayout>

    <TextView
        android:id="@+id/termsOfService"
        style="@style/SettingTextStyle.AuxiliaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtv_aboutus"
        android:layout_marginBottom="@dimen/margin_lvl2"
        android:text="@string/settings_tos" />

    <TextView
        android:id="@+id/txtv_aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_lvl4"
        android:text="@string/settings_aboutus"
        style="@style/SettingTextStyle.AuxiliaryText" />



</RelativeLayout>